PZ put span left margin back avoid cutting off left side of grid

--- a/views/styles.sass
+++ b/views/styles.sass
@@ -9,15 +9,13 @@ h1, h2, h3, h4
 #share-image-container, #upload-photo-container
   text-align: center   
 
-#left-side-header
-  padding: 5px
-  margin-left: 0px
-
-
 #right-side-header
   padding-left: 20px
   margin-left: 0px
 
+#left-side-header p
+  margin-right: 5px
+  
 .deep-shadow
   background: url(/images/shadow-edge.png) no-repeat scroll top left
  
